fixing overlapping in nav bar, fixed scrollbar extra space, added clickable div on home, added account href on account button.

--- a/ui/static/css/style.css
+++ b/ui/static/css/style.css
@@ -90,7 +90,6 @@ body {
   background: #fff;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  overflow-x: hidden;
   color: #67757c;
 }
 html {
